Add missing template and make report.tex

--- a/01/report.tex
+++ b/01/report.tex
@@ -29,16 +29,6 @@
 \maketitle
 \mainmatter
 
-\chapter*{Регламент поиска}
-
-Наименование темы:
-
-\uline{Запаивающий упаковщик телефонов в пакеты\hfill}
-
-Шифр \underline{B65B 53/00}
-
-% Цель поиска информации \uline{Определение технической сложности реализации устройства и поиск похожих устройств}
-
-
+\includepdf{work.pdf}
 
 \end{document}
