--- a/02/report.tex
+++ b/02/report.tex
@@ -4,9 +4,9 @@
 \usepackage{multirow}
 
 \departmentlong{инженерной психологии и эргономики}
-\worktitle{Практическая работа \textnumero1\\\textquote{Патентное исследование и
-патентная информация}}
-\titleleft{ Проверила:\\
+\worktitle{Практическая работа \textnumero2\\\textquote{Авторское право и смежные права}}
+\titleleft{
+    Проверил:\\
     Фомин Д.А.\\
     ~
 }
