--- a/01/report.tex
+++ b/01/report.tex
@@ -6,7 +6,8 @@
 \departmentlong{инженерной психологии и эргономики}
 \worktitle{Практическая работа \textnumero1\\\textquote{Патентное исследование и
 патентная информация}}
-\titleleft{ Проверила:\\
+\titleleft{
+    Проверил:\\
     Фомин Д.А.\\
     ~
 }
